tests/zutil-inheritance-derive/tests/failure/too_many_parents.stderr
error[E0308]: mismatched types
  --> tests/failure/too_many_parents.rs:28:1
   |
28 | / zutil_inheritance::value! {
29 | |     struct D(B, A, C) {}
30 | |     impl Self {}
31 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 3 elements
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BFields, AFields)`
              found tuple `(BFields, AFields, CFields)`
note: associated function defined here
  --> $WORKSPACE/zutil-inheritance/src/lib.rs
   |
   |     fn from_fields(base: BaseStorage, fields: Self::Fields) -> Self;
   |        ^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/failure/too_many_parents.rs:28:1
   |
28 | / zutil_inheritance::value! {
29 | |     struct D(B, A, C) {}
30 | |     impl Self {}
31 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 3 elements
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BMethods, AMethods)`
              found tuple `(BMethods, AMethods, CMethods)`
note: associated function defined here
  --> $WORKSPACE/zutil-inheritance/src/lib.rs
   |
   |     fn from_methods(base: BaseVTable, methods: Self::Methods) -> Self;
   |        ^^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)
